--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,17 @@ services:
     networks:
       - default
 
+  postgres:
+    image: postgres:11.5
+    environment:
+      - POSTGRES_PASSWORD=$DB_PASSWORD
+    ports:
+      - $DB_PORT_FORWARD:5432
+    volumes:
+      - postgresdata:/var/lib/postgresql/data
+    networks:
+      - default
+
 volumes:
   redisdata:
     driver: local
