--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "php": "^7.4|^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "ramsey/uuid": "^4.1",
-        "myclabs/php-enum": "^1.7"
+        "myclabs/php-enum": "^1.7",
+        "ramsey/uuid": "^4.1"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
