:wrench: Configured CircleCI pipelines and deployments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: docker/app/Dockerfile
+      args:
+        REGISTRY: ${REGISTRY}
     image: myparcelcom/integration-exact-online:v1-dev
     working_dir: /opt/app
     environment:
