--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "myclabs/php-enum": "^1.7",
-        "ramsey/uuid": "^4.1"
+        "ramsey/uuid": "^4.1",
+        "rollbar/rollbar-laravel": "^7.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
@@ -48,7 +49,6 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
