--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "viison/address-splitter": "^0.3.4"
     },
     "require-dev": {
+        "brianium/paratest": "^6.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^0.0.5",
