--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "myclabs/php-enum": "^1.7",
+        "myparcelcom/concurrency-safe-migrations": "^0.1",
         "ramsey/uuid": "^4.1",
         "rollbar/rollbar-laravel": "^7.0",
         "viison/address-splitter": "^0.3.4"
