--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "myclabs/php-enum": "^1.7",
         "ramsey/uuid": "^4.1",
         "rollbar/rollbar-laravel": "^7.0",
-        "viison/address-splitter": "^0.3.4"
+        "viison/address-splitter": "^0.3.4",
+        "ext-bcmath": "*"
     },
     "require-dev": {
         "brianium/paratest": "^6.1",
