--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,55 @@
+# For more information: https://laravel.com/docs/sail
 version: '3'
-
 services:
-  integration-exact:
-    build:
-      context: .
-      dockerfile: docker/app/Dockerfile
-      args:
-        REGISTRY: ${REGISTRY}
-    image: myparcelcom/integration-exact:v1-dev
-    working_dir: /opt/app
-    environment:
-      - LOG_LEVEL=$LOG_LEVEL
-    ports:
-      - $APP_PORT:80
-    volumes:
-      - .:/opt/app
-      - composercache:/.composer/cache
-    networks:
-      - default
-      - micronet
-
-  redis:
-    image: redis:3.2
-    volumes:
-      - redisdata:/data
-    networks:
-      - default
-
-  postgres:
-    image: postgres:11.5
-    environment:
-      - POSTGRES_PASSWORD=$DB_PASSWORD
-    ports:
-      - $DB_PORT_FORWARD:5432
-    volumes:
-      - postgresdata:/var/lib/postgresql/data
-    networks:
-      - default
-
-volumes:
-  redisdata:
-    driver: local
-  composercache:
-    driver: local
-  postgresdata:
-    driver: local
-
+    integration.skeleton:
+        build:
+            context: ./docker/8.0
+            dockerfile: Dockerfile
+            args:
+                WWWGROUP: '${WWWGROUP}'
+        image: sail-8.0/app
+        ports:
+            - '${APP_PORT:-80}:80'
+        environment:
+            WWWUSER: '${WWWUSER}'
+            LARAVEL_SAIL: 1
+        volumes:
+            - '.:/var/www/html'
+        networks:
+            - sail
+        depends_on:
+            - pgsql
+            - redis
+    pgsql:
+        image: 'postgres:13'
+        ports:
+            - '${FORWARD_DB_PORT:-5432}:5432'
+        environment:
+            PGPASSWORD: '${DB_PASSWORD:-secret}'
+            POSTGRES_DB: '${DB_DATABASE}'
+            POSTGRES_USER: '${DB_USERNAME}'
+            POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+        volumes:
+            - 'sailpgsql:/var/lib/postgresql/data'
+        networks:
+            - sail
+        healthcheck:
+          test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE}", "-U", "${DB_USERNAME}"]
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sailredis:/data'
+        networks:
+            - sail
+        healthcheck:
+          test: ["CMD", "redis-cli", "ping"]
 networks:
-  default:
-    driver: bridge
-  micronet:
-    external: true
+    sail:
+        driver: bridge
+volumes:
+    sailpgsql:
+        driver: local
+    sailredis:
+        driver: local
