:sparkles: Callback will work only on shipments with matching channel

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8013
-APP_VERSION=IntegrationSkeleton
+APP_VERSION=local
+INTEGRATION_CODE=skeleton
 
 REMOTE_OAUTH2_CLIENT_ID=xxxxx
 REMOTE_OAUTH2_CLIENT_SECRET=yyyyy
