--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: sail-8.0/app
+        image: myparcelcom/integration-skeleton:v1-dev
         ports:
             - '${APP_PORT:-80}:80'
         environment:
