:whale: Fixed some default env settings and button styling on auth page.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,13 @@
-APP_SERVICE="integration.skeleton"
-APP_NAME="Integration Skeleton"
+APP_SERVICE="integration.test"
+APP_NAME="Integration test"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8013
 APP_VERSION=local
-INTEGRATION_CODE=skeleton
+INTEGRATION_CODE=test
 
-REMOTE_OAUTH2_CLIENT_ID=xxxxx
-REMOTE_OAUTH2_CLIENT_SECRET=yyyyy
 REMOTE_OAUTH2_REDIRECT_URI=http://localhost:8013/public/authenticate
 
 LOG_CHANNEL=stack
@@ -19,7 +17,7 @@ DB_CONNECTION=pgsql
 DB_HOST=postgres
 DB_PORT=5432
 DB_PORT_FORWARD=5433
-DB_DATABASE=integration_skeleton
+DB_DATABASE=integration_test
 DB_USERNAME=postgres
 DB_PASSWORD=
 
@@ -34,6 +32,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+FORWARD_REDIS_PORT=
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
