--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - '.:/var/www/html'
     networks:
       - sail
-      - apinet
+      - api_default
     depends_on:
       - redis
   redis:
@@ -33,9 +33,8 @@ services:
 networks:
   sail:
     driver: bridge
-  apinet:
-    external:
-      name: myparcelapi_apinet
+  api_default:
+    external: true
 volumes:
   sailredis:
     driver: local
